# clashfinder

./: .gitignore  AGENTS.md  Pipfile  README.md  pyproject.toml
.github/workflows/: clashfinder.yml  shambhala.yml
festivals/basscoast/: 2026.sh
festivals/basscoast/2026/: basscoast-2026-woov-timetable.json  clashfinder.txt
festivals/lightninginabottle/: 2026.sh
festivals/lightninginabottle/2026/: clashfinder.txt
festivals/shambhalafestival/: 2022.sh  2023.sh  2024.sh  2025.sh  2026.sh  shambhalafestival.artists.json
festivals/shambhalafestival/2022/: shambhalafestival.artists.json  shambhalafestival.stages.json
festivals/shambhalafestival/2023/: shambhalafestival.artists.json  shambhalafestival.stages.json
festivals/shambhalafestival/2024/: clashfinder.txt  shambhalafestival.artists.json  shambhalafestival.stages.json
festivals/shambhalafestival/2025/: clashfinder.txt  shambhalafestival.artists.json  shambhalafestival.stages.json
festivals/shambhalafestival/2026/: clashfinder.txt  shambhalafestival.artists.json  shambhalafestival.stages.json
tests/: test_appmiral_transform.py  test_clashfinder.py
