[tool.poetry]
name = "clashfinder"
version = "0.1.1"
description = ""
authors = ["Derek Ellis <derek@ellisd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
arrow = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
