[project]
name = "clashfinder"
version = "0.1.2"
authors = ["Derek Ellis <derek@ellisd.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.3.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "gitpython>=3.1.44",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
